main/default/objects/Payment_Data__c/Payment_Data__c.object-meta.xml
<CustomObject>
    <label>Payment Summary</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Payment Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>