main/default/objects/Payment_Data__c/fields/Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status__c</fullName>
    <label>Paid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>No Payment Required</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>