main/default/objects/Payment_Data__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Payments Summary</relationshipLabel>
    <relationshipName>Payments_Data</relationshipName>
    <type>Lookup</type>
</CustomField>