main/default/objects/Payment_Data__c/fields/Policy_Link__c.field-meta.xml
<CustomField>
    <fullName>Policy_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Policy__c , Policy__r.Policy_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy</label>
    <type>Text</type>
</CustomField>