main/default/objects/Payment_Data__c/fields/Producing_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Producing_Brokerage__c</fullName>
    <label>Producing Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>