main/default/objects/Payment_Data__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Quote__c , Quote__r.QuoteNumber)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>