main/default/objects/Payment_Data__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Midterm Cancellation</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Full Amendment</fullName>
            </value>
            <value>
                <fullName>Coverage Amendment</fullName>
            </value>
            <value>
                <fullName>Insured Account Update</fullName>
            </value>
            <value>
                <fullName>Flat Cancellation (Ab - Initio)</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Coverage Cancel and Replace</fullName>
            </value>
            <value>
                <fullName>Policy Duration Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>